--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
     <div class="footer-images">
       <img class="large-image" src="https://i.imgur.com/N3vdw2q.jpeg" alt="Ảnh lớn chủ quyền" />
       <div class="small-images">
-        <img src=https://i.imgur.com/N3vdw2q.jpeg" alt="Ảnh nhỏ 1" />
-        <img src="https://i.imgur.com/N3vdw2q.jpeg" alt="Ảnh nhỏ 2" />
+        <img src=https://i.imgur.com/JjNR01K.jpeg" alt="Ảnh nhỏ 1" />
+        <img src="https://i.imgur.com/4qhnp9j.jpeg" alt="Ảnh nhỏ 2" />
       </div>
     </div>
 
@@ -258,7 +258,7 @@
 
   <!-- Nhạc nền ẩn bằng thẻ audio -->
   <audio id="backgroundAudio" loop autoplay preload="auto" style="display:none">
-    <source src="https://files.catbox.moe/79rfom.mp3" type="audio/mpeg" />
+    <source src="https://files.catbox.moe/nchh6u.mp3" type="audio/mpeg" />
     Trình duyệt của bạn không hỗ trợ phần tử audio.
   </audio>
 
