--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hacker | Hùng Dương </title>
+   <span class="badge-verify" title="Verified">
   <style>
     body, html {
       margin: 0;
@@ -258,7 +259,7 @@
 
   <!-- Nhạc nền ẩn bằng thẻ audio -->
   <audio id="backgroundAudio" loop autoplay preload="auto" style="display:none">
-    <source src="https://files.catbox.moe/nchh6u.mp3" type="audio/mpeg" />
+    <source src="https://pomf2.lain.la/f/ct2tzh0p.mp3" type="audio/mpeg" />
     Trình duyệt của bạn không hỗ trợ phần tử audio.
   </audio>
 
