--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@
 
   <!-- Nhạc nền ẩn bằng thẻ audio -->
   <audio id="backgroundAudio" loop autoplay preload="auto" style="display:none">
-    <source src="https://pomf2.lain.la/f/ct2tzh0p.mp3" type="audio/mpeg" />
-    Trình duyệt của bạn không hỗ trợ phần tử audio.
+    <source src="https://files.catbox.moe/79rfom.mp3" type="audio/mpeg" />
   </audio>
 
   <script>
